...
    val cod: String,
    @SerializedName("message")
    val message: Int,
    @SerializedName("cnt")
    val cnt: Int,
    @SerializedName("list")
    val weatherList: List<WeatherItemDto>,
    @SerializedName("city")
    val city: CityDto
)

data class WeatherItemDto(
    @SerializedName("dt")
...
